# formal_grammars

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
backend/: CMakeLists.txt  early_alg.cpp  early_alg.h  formal_languages.ixx  gr_to_pd.cpp  gr_to_pd.h  gr_to_push_down.cpp.autosave  grammar.cpp  grammar.h  grammar.ixx  grammar_alg.cpp  grammar_alg.h  grammar_alg.ixx  greibach.cpp  greibach.h  greibach.ixx  move.h  move.ixx  pd_to_gr.cpp  pd_to_gr.h  push_down.h  result.ixx  s_rule.cpp  s_rule.h  s_rule.ixx  sign.cpp  sign.h  sign.h~  sign.ixx  sign_list.cpp  sign_list.h  sign_list.ixx  t3.txt  t3.txt~  wind1.pro
input/: t2.txt  t2_result.txt
profiles/: gcc-14-debug  gcc-14-release
ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  new_grammar.cpp  new_grammar.ui
unittests/: CMakeLists.txt  test_greibach.cpp  test_s_rule.cpp  test_sign.cpp
wind1/: CMakeLists.txt  a.out  early_alg.cpp  early_alg.h  gr_to_pd.cpp  gr_to_pd.h  gr_to_push_down.h.autosave  grammar.cpp  grammar.h  grammar_alg.cpp  grammar_alg.h  greibach.cpp  greibach.h  greibach_test.gr  mainwindow.h  move.h  new_grammar.h  pd_to_gr.h  push_down.cpp.autosave  push_down.h  result.h  s_rule.cpp  s_rule.h  sign.cpp  sign.h  sign_list.cpp  sign_list.h  simple_grammar.gr  wind1.pro.user.1c927a2.2.6pre1  wind1.pro.user.a4b16b6.2.7pre1
